--- a/src/ejs/html/index.ejs
+++ b/src/ejs/html/index.ejs
@@ -4,7 +4,7 @@
 <head>
 <% include ../include/common/head %>
     <!--css-->
-    <link rel="stylesheet" href="/css/all.css">
+    <link rel="stylesheet" href="/css/common.css">
     <!--/css-->
 </head>
 
@@ -19,6 +19,11 @@
 <% include ../include/module/sample %>    
 
 <% include ../include/common/footer %>
+
+    <!--js-->
+    <script src="/js/lib.js"></script>
+    <script src="/js/common.js"></script>
+    <!--/js-->
 </body>
 
 </html>
