--- a/src/ejs/html/index.ejs
+++ b/src/ejs/html/index.ejs
@@ -4,7 +4,7 @@
 <head>
 <% include ../include/common/head %>
     <!--css-->
-    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="../css/common.css">
     <!--/css-->
 </head>
 
@@ -14,15 +14,15 @@
 
     <h1><%= data.default.site_title %></h1>
 
-    <p>トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文</p>
+    <p>トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文トップリード文</p>
 
 <% include ../include/module/sample %>    
 
 <% include ../include/common/footer %>
 
     <!--js-->
-    <script src="/js/lib.js"></script>
-    <script src="/js/common.js"></script>
+    <script src="../js/lib.js"></script>
+    <script src="../js/common.js"></script>
     <!--/js-->
 </body>
 
